--- a/06-03-2020.ipynb
+++ b/06-03-2020.ipynb
@@ -1008,40 +1008,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[10, 2, 15, 90]\n",
-      "[90]\n",
-      "[]\n",
-      "[90, 15, 2]\n",
-      "[90, 15, 2, 10]\n"
+     "ename": "NameError",
+     "evalue": "name 'a1' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-7704c5dd470a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[1;31m#print(2:2)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;31m#print(a1[3:15])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma1\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m15\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m#print(a1[-1:-4:-1])\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'a1' is not defined"
      ]
     }
    ],
    "source": [
     "print(a1[:])\n",
     "#print(2:2)\n",
-    "print(a1[3:15])\n",
+    "#print(a1[3:15])\n",
     "print(a1[15:3])\n",
-    "print(a1[-1:-4:-1])\n",
-    "print(a1[::-1])#or print(a1[-1::-1])"
+    "#print(a1[-1:-4:-1])\n",
+    "print(a1[::-1])#or print(a1[-1::-1])#to retrview the values from list back ward direstions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 4, 3, 2, 1]\n"
+     ]
+    }
+   ],
    "source": [
-    "print(a1)\n",
-    "#a1[:2]=[101,102]#replace the two values 101,102 from start possition\n",
-    "#a1[:-1]=[190]\n",
-    "#print(a1)"
+    "l3=[1,2,3,4,5]\n",
+    "print(l3[-1::-1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[190, 60]\n"
+     ]
+    }
+   ],
+   "source": [
+    "li=[10,20,30,50,60]\n",
+    "#print(li)\n",
+    "#li[:3]=[101,102,103]#replace the two values 101,102 from start possition\n",
+    "li[:-1]=[190]#to update the value in first possition\n",
+    "print(li)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[400, 300, 200, 100]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l2=[100,200,300,400]\n",
+    "l2[:-1]# to print the all the values in the list\n",
+    "l2[::-1]#Retrview the values from list in backward direction this called silicing\n"
    ]
   },
   {
